--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   <body>
     <header>
       <img src="https://place-hold.it/200x70/ddd" />
-    </header>
 
-    <nav>
-      <!-- Navigation content goes here -->
-    </nav>
+      <nav id="Nav1">Nav Item 1</nav>
+      <nav id="Nav2">Nav Item 2</nav>
+      <nav id="Nav3">Nav Item 3</nav>
+      <nav id="Nav4">Nav Item 4</nav>
+    </header>
 
     <main>
       <section id="section1">
@@ -24,19 +25,27 @@
       <section id="section2">
         <img src="https://place-hold.it/300x375/ddd" />
         <img src="https://place-hold.it/300x375/ddd" />
-      </section>
-      
-      <section id="section3">
         <img src="https://place-hold.it/300x375/ddd" />
       </section>
 
-      <section id="section4">
-        <img src="https://place-hold.it/300x375/ddd" />
+      <section id="section3">
+        <img src="https://place-hold.it/480x400/ddd" />
+        <h1>Featured Section Heading</h1>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only
+          five centuries, but also the leap into electronic typesetting,
+          remaining essentially unchanged. It was popularised in the 1960s with
+          the release of Letraset sheets containing Lorem Ipsum passages, and
+          more recently with desktop publishing software like Aldus PageMaker
+          including versions of Lorem Ipsum.
+        </p>
+        <button type="button">Call To Action</button>
       </section>
     </main>
 
-    <footer>
-      <!-- Footer content goes here -->
-    </footer>
+    <footer>&copy;Caleb McKinney</footer>
   </body>
 </html>
